--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/AugustineUmeagudosi/nodejsBoilerPlateForMongoDB#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -26,6 +27,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.2"
   }
