--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "node-fetch": "^2.6.1"
   }
 }
