--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 NODE_ENV=development
 PORT=5000
 JWT_SECRET="IshouldBe$ecret"
-DB_URL="mongodb://localhost/DBname"
+DB_URL="mongodb://localhost/mdoc"
+
+PAYSTACK_SECRET_KEY = ""
 
 MAIL_HOST=mail.example.com
 MAIL_PORT=465
@@ -9,7 +11,7 @@ MAIL_USERNAME=email@example.com
 MAIL_PASSWORD=emailPassword
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=email@example.com
-MAIL_FROM_NAME="Application name"
+MAIL_FROM_NAME="MDOC Payment system"
 MAIL_REPLY_TO=email@example.com
 MAIL_BCC=email@example.com
 MAIL_CC=email@example.com
